--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <li>Maintained system performance, availability, and security standards</li>
             <li>Created and updated technical documentation</li>
             <li>🏆 Spot Award – Recognized for outstanding contribution and professionalism</li>
-             <img src="assets/images/spot-award.jpeg" alt="Award" width="250">
+             <img src="assets/spot-award.jpeg" alt="Award" width="250">
         </ul>
     </section>
 
@@ -91,7 +91,7 @@
         </ul>
         <div class="certificates">
             <figure>
-                <img src="assets/images/internship-cert.jpeg" alt="Machine Learning Internship Certificate" width="250">
+                <img src="assets/internship-cert.jpeg" alt="Machine Learning Internship Certificate" width="250">
                 <figcaption>Machine Learning Internship Certificate</figcaption>
             </figure>
         </div>
@@ -114,23 +114,23 @@
         <h2>Certificates</h2>
         <div class="certificates">
             <figure>
-                <img src="assets/images/hipaa-cert.jpeg" alt="HIPAA Compliance Training" width="250">
+                <img src="assets/hipaa-cert.jpeg" alt="HIPAA Compliance Training" width="250">
                 <figcaption>HIPAA Compliance Training</figcaption>
             </figure>
             <figure>
-                <img src="assets/images/itil-cert.jpeg" alt="ITIL / ServiceNow Certificate" width="250">
+                <img src="assets/itil-cert.jpeg" alt="ITIL / ServiceNow Certificate" width="250">
                 <figcaption>ITIL / ServiceNow Certificate</figcaption>
             </figure>
             <figure>
-                <img src="assets/images/programming-cert.jpeg" alt="Programming Foundations – LinkedIn Learning" width="250">
+                <img src="assets/programming-cert.jpeg" alt="Programming Foundations – LinkedIn Learning" width="250">
                 <figcaption>Programming Foundations – LinkedIn Learning</figcaption>
             </figure>
             <figure>
-                <img src="assets/images/python-cert.jpeg" alt="Python Full Stack Web Development Certificate" width="250">
+                <img src="assets/python-cert.jpeg" alt="Python Full Stack Web Development Certificate" width="250">
                 <figcaption>Python Full Stack Web Development (6 Months)</figcaption>
             </figure>
             <figure>
-                <img src="assets/images/webdesign-cert.jpeg" alt="Website Design & Development Certificate" width="250">
+                <img src="assets/webdesign-cert.jpeg" alt="Website Design & Development Certificate" width="250">
                 <figcaption>Website Design & Development – Internship Studio</figcaption>
             </figure>
         </div>
