--- a/index.html
+++ b/index.html
@@ -8,138 +8,106 @@
 </head>
 <body>
 
-    <!-- Header with Navigation -->
-    <header>
-        <h1>VANGARA THANUSHA</h1>
-        <p><strong>SYSTEM ADMINISTRATOR</strong></p>
+<header>
+    <h1>VANGARA THANUSHA</h1>
+    <p class="role">SYSTEM ADMINISTRATOR</p>
 
-        <!-- Navigation -->
-        <nav>
-            <a href="#about">About</a>
-            <a href="#education">Education</a>
-            <a href="#technical-skills">Technical Skills</a>
-            <a href="#experience">Experience</a>
-            <a href="#internship">Internship</a>
-            <a href="#projects">Projects</a>
-            <a href="#certificates">Certificates</a>
-        </nav>
-    </header>
+    <nav>
+        <a href="#about">About</a>
+        <a href="#education">Education</a>
+        <a href="#skills">Skills</a>
+        <a href="#experience">Experience</a>
+        <a href="#internship">Internship</a>
+        <a href="#projects">Projects</a>
+        <a href="#certificates">Certificates</a>
+    </nav>
+</header>
 
-    <!-- About Section -->
-    <section id="about">
-        <h2>About Me</h2>
-        <p>
-            Dedicated System Administrator with 1 year of hands-on experience in managing IT infrastructure, enterprise applications, and ITSM processes. 
-            Strong expertise in ServiceNow, Azure DevOps, and application support with a proven track record of ensuring system stability, performance, and user satisfaction.
-        </p>
-    </section>
+<section id="about">
+    <h2>About Me</h2>
+    <p>
+        Dedicated System Administrator with 1 year of experience in managing IT infrastructure,
+        enterprise applications, and ITSM processes. Strong expertise in ServiceNow,
+        Azure DevOps, and application support.
+    </p>
+</section>
 
-    <!-- Education Section -->
-    <section id="education">
-        <h2>Education</h2>
-        <ul>
-            <li><strong>M.Sc. Computer Science (2024)</strong> – Raja Bahadur Venkata Rama Reddy College, Osmania University, Score: 93%</li>
-            <li><strong>B.Sc. (MPCs – Computer Science) (2022)</strong> – Sujatha Degree College, Osmania University, CGPA: 8.3</li>
-            <li><strong>Intermediate (MPC) (2019)</strong> – Narayana Junior College, Percentage: 76%</li>
-            <li><strong>S.S.C (2017)</strong> – Navketan Model School, CGPA: 8.2</li>
-        </ul>
-    </section>
+<section id="education">
+    <h2>Education</h2>
+    <ul>
+        <li><strong>M.Sc Computer Science (2024)</strong> – Osmania University (93%)</li>
+        <li><strong>B.Sc MPCs (2022)</strong> – Osmania University (CGPA 8.3)</li>
+        <li><strong>Intermediate MPC (2019)</strong> – 76%</li>
+        <li><strong>SSC (2017)</strong> – CGPA 8.2</li>
+    </ul>
+</section>
 
-    <!-- Technical Skills -->
-    <section id="technical-skills">
-        <h2>Technical Skills</h2>
-        <ul>
-            <li><strong>Languages:</strong> Python, JavaScript, HTML5, CSS3</li>
-            <li><strong>Frameworks:</strong> Django, .NET</li>
-            <li><strong>DevOps Tools:</strong> Azure DevOps</li>
-            <li><strong>ITSM Tools:</strong> ServiceNow</li>
-            <li><strong>Enterprise Apps:</strong> QNXT, BizTalk, CAPTIVA, TFS</li>
-            <li><strong>Databases:</strong> SQL, MySQL</li>
-            <li><strong>OS:</strong> Windows</li>
-        </ul>
-    </section>
+<section id="skills">
+    <h2>Technical Skills</h2>
+    <ul>
+        <li>Python, JavaScript, HTML, CSS</li>
+        <li>Django, .NET</li>
+        <li>Azure DevOps</li>
+        <li>ServiceNow (ITSM)</li>
+        <li>QNXT, BizTalk, CAPTIVA, TFS</li>
+        <li>SQL, MySQL</li>
+        <li>Windows Server</li>
+    </ul>
+</section>
 
-    <!-- Experience Section -->
-    <section id="experience">
-        <h2>Work Experience</h2>
-        <p><strong>System Administrator – 1 Year Experience</strong></p>
-        <ul>
-            <li>Managed and supported Windows servers and enterprise IT infrastructure</li>
-            <li>Handled Incidents, Change Requests, and Service Requests using ServiceNow (ITIL)</li>
-            <li>Supported applications: TFS, CAPTIVA, QNXT, BizTalk</li>
-            <li>Performed QNXT installation, configuration, and post-installation support</li>
-            <li>Server monitoring, troubleshooting, patching, and maintenance</li>
-            <li>Used Azure DevOps for deployments and coordination with dev teams</li>
-            <li>Managed client application emails and ensured timely resolutions</li>
-            <li>Maintained system performance, availability, and security standards</li>
-            <li>Created and updated technical documentation</li>
-            <li>🏆 Spot Award – Recognized for outstanding contribution and professionalism</li>
-             <img src="assets/spot-award.jpeg" alt="Award" width="250">
-        </ul>
-    </section>
+<section id="experience">
+    <h2>Work Experience</h2>
+    <ul>
+        <li>System Administrator – 1 Year Experience</li>
+        <li>Incident, Change & Service Request handling in ServiceNow</li>
+        <li>QNXT installation and application support</li>
+        <li>Azure DevOps deployments</li>
+        <li>Server monitoring, patching & troubleshooting</li>
+        <li>🏆 Spot Award for outstanding performance</li>
+    </ul>
 
-    <!-- Internship Section -->
-    <section id="internship">
-        <h2>Internship</h2>
-        <p><strong>Machine Learning Intern – Indian Servers | Apr 2023 – Jun 2023</strong></p>
-        <ul>
-            <li>Developed NLP-based Telegram bot Gita-GPT</li>
-            <li>Integrated Quora for intelligent responses</li>
-            <li>Built AI chatbot for recommendations and queries</li>
-            <li>Created a Telegram bot for finding beaches in India</li>
-            <li>Hands-on experience with Python, NLP, APIs, and bots</li>
-        </ul>
-        <div class="certificates">
-            <figure>
-                <img src="assets/internship-cert.jpeg" alt="Machine Learning Internship Certificate" width="250">
-                <figcaption>Machine Learning Internship Certificate</figcaption>
-            </figure>
-        </div>
-    </section>
+    <img src="assets/spot-award.jpeg" alt="Spot Award" class="resume-img">
+</section>
 
-    <!-- Projects Section (No images, only names) -->
-    <section id="projects">
-        <h2>Projects</h2>
-        <ul class="projects-list">
-            <li>Online Bus Ticket Booking System (GUI)</li>
-            <li>Attendance Application using .NET</li>
-            <li>Video Encryption & Decryption using AES Algorithm</li>
-            <li>NLP-Infused Telegram Bot (Gita-GPT)</li>
-            <li>Hostel Searching Web Application (Full Stack)</li>
-        </ul>
-    </section>
+<section id="internship">
+    <h2>Internship</h2>
+    <p><strong>Machine Learning Intern – Indian Servers (Apr 2023 – Jun 2023)</strong></p>
 
-    <!-- Certificates Section -->
-    <section id="certificates">
-        <h2>Certificates</h2>
-        <div class="certificates">
-            <figure>
-                <img src="assets/hipaa-cert.jpeg" alt="HIPAA Compliance Training" width="250">
-                <figcaption>HIPAA Compliance Training</figcaption>
-            </figure>
-            <figure>
-                <img src="assets/itil-cert.jpeg" alt="ITIL / ServiceNow Certificate" width="250">
-                <figcaption>ITIL / ServiceNow Certificate</figcaption>
-            </figure>
-            <figure>
-                <img src="assets/programming-cert.jpeg" alt="Programming Foundations – LinkedIn Learning" width="250">
-                <figcaption>Programming Foundations – LinkedIn Learning</figcaption>
-            </figure>
-            <figure>
-                <img src="assets/python-cert.jpeg" alt="Python Full Stack Web Development Certificate" width="250">
-                <figcaption>Python Full Stack Web Development (6 Months)</figcaption>
-            </figure>
-            <figure>
-                <img src="assets/webdesign-cert.jpeg" alt="Website Design & Development Certificate" width="250">
-                <figcaption>Website Design & Development – Internship Studio</figcaption>
-            </figure>
-        </div>
-    </section>
+    <ul>
+        <li>NLP-based Telegram bot (Gita-GPT)</li>
+        <li>API integrations and chatbot development</li>
+        <li>Python & NLP hands-on experience</li>
+    </ul>
 
-    <!-- Footer -->
-    <footer>
-        <p>© 2026 Vangara Thanusha</p>
-    </footer>
+    <img src="assets/internship-cert.jpeg" alt="Internship Certificate" class="resume-img">
+</section>
+
+<section id="projects">
+    <h2>Projects</h2>
+    <ul>
+        <li>Online Bus Ticket Booking System</li>
+        <li>Attendance Application (.NET)</li>
+        <li>Video Encryption & Decryption (AES)</li>
+        <li>NLP Telegram Bot</li>
+        <li>Hostel Searching Web App</li>
+    </ul>
+</section>
+
+<section id="certificates">
+    <h2>Certificates</h2>
+
+    <div class="cert-grid">
+        <img src="assets/hipaa-cert.jpeg" alt="HIPAA" class="resume-img">
+        <img src="assets/itil-cert.jpeg" alt="ITIL" class="resume-img">
+        <img src="assets/programming-cert.jpeg" alt="Programming" class="resume-img">
+        <img src="assets/python-cert.jpeg" alt="Python" class="resume-img">
+        <img src="assets/webdesign-cert.jpeg" alt="Web Design" class="resume-img">
+    </div>
+</section>
+
+<footer>
+    <p>© 2026 Vangara Thanusha</p>
+</footer>
 
 </body>
 </html>
