--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
 <header>
     <h1>VANGARA THANUSHA</h1>
-    <p class="role">SYSTEM ADMINISTRATOR</p>
+    <p><strong>SYSTEM ADMINISTRATOR</strong></p>
 
     <nav>
         <a href="#about">About</a>
         <a href="#education">Education</a>
-        <a href="#skills">Skills</a>
+        <a href="#technical-skills">Technical Skills</a>
         <a href="#experience">Experience</a>
         <a href="#internship">Internship</a>
         <a href="#projects">Projects</a>
@@ -26,9 +26,8 @@
 <section id="about">
     <h2>About Me</h2>
     <p>
-        Dedicated System Administrator with 1 year of experience in managing IT infrastructure,
-        enterprise applications, and ITSM processes. Strong expertise in ServiceNow,
-        Azure DevOps, and application support.
+        Dedicated System Administrator with 1 year of hands-on experience in managing IT infrastructure,
+        enterprise applications, and ITSM processes. Strong expertise in ServiceNow and Azure DevOps.
     </p>
 </section>
 
@@ -37,72 +36,66 @@
     <ul>
         <li><strong>M.Sc Computer Science (2024)</strong> – Osmania University (93%)</li>
         <li><strong>B.Sc MPCs (2022)</strong> – Osmania University (CGPA 8.3)</li>
-        <li><strong>Intermediate MPC (2019)</strong> – 76%</li>
+        <li><strong>Intermediate (2019)</strong> – 76%</li>
         <li><strong>SSC (2017)</strong> – CGPA 8.2</li>
     </ul>
 </section>
 
-<section id="skills">
+<section id="technical-skills">
     <h2>Technical Skills</h2>
     <ul>
-        <li>Python, JavaScript, HTML, CSS</li>
-        <li>Django, .NET</li>
-        <li>Azure DevOps</li>
-        <li>ServiceNow (ITSM)</li>
-        <li>QNXT, BizTalk, CAPTIVA, TFS</li>
-        <li>SQL, MySQL</li>
-        <li>Windows Server</li>
+        <li><strong>Languages:</strong> Python, HTML, CSS, JavaScript</li>
+        <li><strong>Frameworks:</strong> Django, .NET</li>
+        <li><strong>DevOps:</strong> Azure DevOps</li>
+        <li><strong>ITSM:</strong> ServiceNow</li>
+        <li><strong>Enterprise Apps:</strong> QNXT, BizTalk, CAPTIVA, TFS</li>
+        <li><strong>Databases:</strong> SQL, MySQL</li>
+        <li><strong>OS:</strong> Windows</li>
     </ul>
 </section>
 
 <section id="experience">
     <h2>Work Experience</h2>
     <ul>
-        <li>System Administrator – 1 Year Experience</li>
-        <li>Incident, Change & Service Request handling in ServiceNow</li>
-        <li>QNXT installation and application support</li>
-        <li>Azure DevOps deployments</li>
-        <li>Server monitoring, patching & troubleshooting</li>
-        <li>🏆 Spot Award for outstanding performance</li>
+        <li>Windows server administration & monitoring</li>
+        <li>Incident & Change management using ServiceNow</li>
+        <li>Application support: QNXT, BizTalk, CAPTIVA</li>
+        <li>QNXT installation & post-installation support</li>
+        <li>Azure DevOps deployments & coordination</li>
+        <li><strong>🏆 Spot Award for outstanding performance</strong></li>
     </ul>
-
-    <img src="assets/spot-award.jpeg" alt="Spot Award" class="resume-img">
 </section>
 
 <section id="internship">
     <h2>Internship</h2>
-    <p><strong>Machine Learning Intern – Indian Servers (Apr 2023 – Jun 2023)</strong></p>
-
+    <p><strong>Machine Learning Intern – Indian Servers</strong></p>
     <ul>
-        <li>NLP-based Telegram bot (Gita-GPT)</li>
-        <li>API integrations and chatbot development</li>
+        <li>NLP-based Telegram Bot (Gita-GPT)</li>
+        <li>API integrations & chatbot development</li>
         <li>Python & NLP hands-on experience</li>
     </ul>
-
-    <img src="assets/internship-cert.jpeg" alt="Internship Certificate" class="resume-img">
 </section>
 
 <section id="projects">
     <h2>Projects</h2>
-    <ul>
+    <ul class="projects-list">
+        <li>Attendance Application using .NET</li>
         <li>Online Bus Ticket Booking System</li>
-        <li>Attendance Application (.NET)</li>
         <li>Video Encryption & Decryption (AES)</li>
-        <li>NLP Telegram Bot</li>
-        <li>Hostel Searching Web App</li>
+        <li>Telegram NLP Chatbot</li>
+        <li>Hostel Searching Web Application</li>
     </ul>
 </section>
 
 <section id="certificates">
     <h2>Certificates</h2>
-
-    <div class="cert-grid">
-        <img src="assets/hipaa-cert.jpeg" alt="HIPAA" class="resume-img">
-        <img src="assets/itil-cert.jpeg" alt="ITIL" class="resume-img">
-        <img src="assets/programming-cert.jpeg" alt="Programming" class="resume-img">
-        <img src="assets/python-cert.jpeg" alt="Python" class="resume-img">
-        <img src="assets/webdesign-cert.jpeg" alt="Web Design" class="resume-img">
-    </div>
+    <ul>
+        <li>HIPAA Compliance Training</li>
+        <li>ITIL / ServiceNow Certification</li>
+        <li>Programming Foundations – LinkedIn Learning</li>
+        <li>Python Full Stack Web Development</li>
+        <li>Website Design & Development</li>
+    </ul>
 </section>
 
 <footer>
