--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
         <li>Azure DevOps deployments & coordination</li>
         <li><strong>🏆 Spot Award for outstanding performance</strong></li>
     </ul>
+    <img src="assets/spot-award.jpeg" alt="Spot Award">
 </section>
 
 <section id="internship">
@@ -74,6 +75,7 @@
         <li>API integrations & chatbot development</li>
         <li>Python & NLP hands-on experience</li>
     </ul>
+    <img src="assets/internship-cert.jpeg" alt="Internship Certificate">
 </section>
 
 <section id="projects">
@@ -89,13 +91,13 @@
 
 <section id="certificates">
     <h2>Certificates</h2>
-    <ul>
-        <li>HIPAA Compliance Training</li>
-        <li>ITIL / ServiceNow Certification</li>
-        <li>Programming Foundations – LinkedIn Learning</li>
-        <li>Python Full Stack Web Development</li>
-        <li>Website Design & Development</li>
-    </ul>
+    <div class="certificates">
+        <img src="assets/hipaa-cert.jpeg" alt="HIPAA Certificate">
+        <img src="assets/itil-cert.jpeg" alt="ITIL Certificate">
+        <img src="assets/programming-cert.jpeg" alt="Programming Certificate">
+        <img src="assets/python-cert.jpeg" alt="Python Certificate">
+        <img src="assets/webdesign-cert.jpeg" alt="Web Design Certificate">
+    </div>
 </section>
 
 <footer>
