--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <li>Incident & Change Management (ServiceNow)</li>
         <li>QNXT Installation & Support</li>
         <li>Azure DevOps Deployments</li>
-        <li><strong>🏆 Spot Award Winner</strong></li>
+        <li><strong> Spot Award Winner</strong></li>
     </ul>
 
     <div class="slider">
