--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vangara Thanusha | Portfolio</title>
+    <title>Vangara Thanusha | Professional Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -23,6 +23,7 @@
     </nav>
 </header>
 
+<!-- ABOUT -->
 <section id="about" class="card">
     <h2>About Me</h2>
     <p>
@@ -32,6 +33,7 @@
     </p>
 </section>
 
+<!-- EDUCATION -->
 <section id="education" class="card">
     <h2>Education</h2>
     <ul>
@@ -42,6 +44,7 @@
     </ul>
 </section>
 
+<!-- SKILLS -->
 <section id="skills" class="card">
     <h2>Technical Skills</h2>
     <ul>
@@ -55,6 +58,7 @@
     </ul>
 </section>
 
+<!-- EXPERIENCE -->
 <section id="experience" class="card">
     <h2>Work Experience</h2>
     <ul>
@@ -70,12 +74,12 @@
     </div>
 </section>
 
-<!-- ✅ INTERNSHIP SECTION (ONLY ONE IMAGE) -->
+<!-- INTERNSHIP -->
 <section id="internship" class="card">
     <h2>Internship</h2>
     <p><strong>Machine Learning Intern – Indian Servers</strong></p>
     <ul>
-        <li>Developed NLP-based Telegram bot (Gita-GPT)</li>
+        <li>Developed NLP-based Telegram Bot (Gita-GPT)</li>
         <li>Integrated APIs and built intelligent chatbot responses</li>
         <li>Hands-on experience with Python, NLP, and automation</li>
     </ul>
@@ -85,9 +89,10 @@
     </div>
 </section>
 
+<!-- PROJECTS -->
 <section id="projects" class="card">
     <h2>Projects</h2>
-    <ul class="projects">
+    <ul>
         <li>Attendance Application using .NET</li>
         <li>Online Bus Ticket Booking System</li>
         <li>Video Encryption & Decryption using AES Algorithm</li>
@@ -96,7 +101,7 @@
     </ul>
 </section>
 
-<!-- ✅ CERTIFICATES SECTION (SLIDER FOR ALL OTHER CERTIFICATES) -->
+<!-- CERTIFICATES -->
 <section id="certificates" class="card">
     <h2>Certificates</h2>
 
