--- a/index.html
+++ b/index.html
@@ -23,17 +23,15 @@
     </nav>
 </header>
 
-<!-- ABOUT -->
 <section id="about" class="card">
     <h2>About Me</h2>
     <p>
         Dedicated System Administrator with 1 year of hands-on experience in managing
         enterprise IT infrastructure, application support, and ITSM processes.
-        Proficient in ServiceNow, Azure DevOps, and enterprise healthcare applications.
+        Skilled in ServiceNow, Azure DevOps, and enterprise healthcare applications.
     </p>
 </section>
 
-<!-- EDUCATION -->
 <section id="education" class="card">
     <h2>Education</h2>
     <ul>
@@ -44,7 +42,6 @@
     </ul>
 </section>
 
-<!-- SKILLS -->
 <section id="skills" class="card">
     <h2>Technical Skills</h2>
     <ul>
@@ -54,19 +51,18 @@
         <li>ITSM Tool: ServiceNow</li>
         <li>Enterprise Apps: QNXT, BizTalk, CAPTIVA, TFS</li>
         <li>Databases: SQL, MySQL</li>
-        <li>Operating System: Windows Server</li>
+        <li>OS: Windows Server</li>
     </ul>
 </section>
 
-<!-- EXPERIENCE -->
 <section id="experience" class="card">
     <h2>Work Experience</h2>
     <ul>
-        <li>Windows Server administration and monitoring</li>
-        <li>Incident, Change & Service Request management using ServiceNow</li>
-        <li>QNXT installation, configuration, and application support</li>
-        <li>Azure DevOps deployments and coordination with development teams</li>
-        <li><strong>🏆 Spot Award – Recognized for outstanding performance</strong></li>
+        <li>Windows Server administration & monitoring</li>
+        <li>Incident & Change Management using ServiceNow</li>
+        <li>QNXT installation & application support</li>
+        <li>Azure DevOps deployments & coordination</li>
+        <li><strong>🏆 Spot Award – Outstanding Performance</strong></li>
     </ul>
 
     <div class="image-box">
@@ -74,14 +70,13 @@
     </div>
 </section>
 
-<!-- INTERNSHIP -->
 <section id="internship" class="card">
     <h2>Internship</h2>
     <p><strong>Machine Learning Intern – Indian Servers</strong></p>
     <ul>
-        <li>Developed NLP-based Telegram Bot (Gita-GPT)</li>
-        <li>Integrated APIs and built intelligent chatbot responses</li>
-        <li>Hands-on experience with Python, NLP, and automation</li>
+        <li>Developed NLP-based Telegram bot (Gita-GPT)</li>
+        <li>API integration and chatbot automation</li>
+        <li>Hands-on experience with Python & NLP</li>
     </ul>
 
     <div class="image-box">
@@ -89,26 +84,40 @@
     </div>
 </section>
 
-<!-- PROJECTS -->
 <section id="projects" class="card">
     <h2>Projects</h2>
     <ul>
         <li>Attendance Application using .NET</li>
         <li>Online Bus Ticket Booking System</li>
-        <li>Video Encryption & Decryption using AES Algorithm</li>
-        <li>NLP-Infused Telegram Chatbot (Gita-GPT)</li>
+        <li>Video Encryption & Decryption using AES</li>
+        <li>NLP Telegram Chatbot (Gita-GPT)</li>
         <li>Hostel Searching Web Application</li>
     </ul>
 </section>
 
-<!-- CERTIFICATES -->
 <section id="certificates" class="card">
     <h2>Certificates</h2>
 
-    <div class="slider">
-        <button class="arrow" onclick="prevCert()">❮</button>
-        <img id="certImage" src="assets/hipaa-cert.jpeg" alt="Certificate">
-        <button class="arrow" onclick="nextCert()">❯</button>
+    <div class="cert-grid">
+        <div class="cert-card">
+            <img src="assets/hipaa-cert.jpeg">
+            <p>HIPAA Compliance</p>
+        </div>
+
+        <div class="cert-card">
+            <img src="assets/itil-cert.jpeg">
+            <p>ITIL Foundation</p>
+        </div>
+
+        <div class="cert-card">
+            <img src="assets/python-cert.jpeg">
+            <p>Python Programming</p>
+        </div>
+
+        <div class="cert-card">
+            <img src="assets/webdesign-cert.jpeg">
+            <p>Web Design</p>
+        </div>
     </div>
 </section>
 
@@ -116,6 +125,5 @@
     <p>© 2026 Vangara Thanusha | Professional Portfolio</p>
 </footer>
 
-<script src="script.js"></script>
 </body>
 </html>
