--- a/index.html
+++ b/index.html
@@ -20,15 +20,16 @@
         <a href="#internship">Internship</a>
         <a href="#projects">Projects</a>
         <a href="#certificates">Certificates</a>
+        <a href="#interests">Interests</a>
     </nav>
 </header>
 
 <section id="about" class="card">
     <h2>About Me</h2>
     <p>
-        Dedicated System Administrator with 1 year of hands-on experience in managing
-        enterprise IT infrastructure, application support, and ITSM processes.
-        Skilled in ServiceNow, Azure DevOps, and enterprise healthcare applications.
+        Dedicated System Administrator with 1 year of professional experience in managing
+        enterprise IT infrastructure, ServiceNow ITSM processes, and Azure DevOps.
+        Strong background in application support, server administration, and system reliability.
     </p>
 </section>
 
@@ -45,24 +46,24 @@
 <section id="skills" class="card">
     <h2>Technical Skills</h2>
     <ul>
-        <li>Languages: Python, HTML, CSS, JavaScript</li>
+        <li>Programming: Python, HTML5, CSS3, JavaScript</li>
         <li>Frameworks: Django, .NET</li>
         <li>DevOps Tools: Azure DevOps</li>
         <li>ITSM Tool: ServiceNow</li>
         <li>Enterprise Apps: QNXT, BizTalk, CAPTIVA, TFS</li>
         <li>Databases: SQL, MySQL</li>
-        <li>OS: Windows Server</li>
+        <li>Operating System: Windows Server</li>
     </ul>
 </section>
 
 <section id="experience" class="card">
     <h2>Work Experience</h2>
     <ul>
-        <li>Windows Server administration & monitoring</li>
-        <li>Incident & Change Management using ServiceNow</li>
-        <li>QNXT installation & application support</li>
-        <li>Azure DevOps deployments & coordination</li>
-        <li><strong>🏆 Spot Award – Outstanding Performance</strong></li>
+        <li>Windows Server administration, monitoring, and maintenance</li>
+        <li>Incident, Change, and Service Request handling using ServiceNow (ITIL)</li>
+        <li>QNXT installation, configuration, and post-installation support</li>
+        <li>Azure DevOps deployments and coordination with development teams</li>
+        <li><strong>🏆 Spot Award – Recognized for outstanding performance</strong></li>
     </ul>
 
     <div class="image-box">
@@ -72,11 +73,14 @@
 
 <section id="internship" class="card">
     <h2>Internship</h2>
-    <p><strong>Machine Learning Intern – Indian Servers</strong></p>
+    <p><strong>Machine Learning Intern</strong></p>
+    <p><strong>Indian Servers | April 2023 – June 2023</strong></p>
+
     <ul>
-        <li>Developed NLP-based Telegram bot (Gita-GPT)</li>
-        <li>API integration and chatbot automation</li>
-        <li>Hands-on experience with Python & NLP</li>
+        <li>Developed an NLP-infused Telegram bot (Gita-GPT) integrated with Quora</li>
+        <li>Built AI chatbot functionalities for personalized recommendations and query handling</li>
+        <li>Created a Telegram bot for finding beaches in India</li>
+        <li>Gained hands-on experience in Python, NLP algorithms, API integration, and chatbot development</li>
     </ul>
 
     <div class="image-box">
@@ -86,12 +90,12 @@
 
 <section id="projects" class="card">
     <h2>Projects</h2>
-    <ul>
-        <li>Attendance Application using .NET</li>
+    <ul class="projects">
+        <li>NLP-Infused Telegram Bot (Gita-GPT)</li>
         <li>Online Bus Ticket Booking System</li>
-        <li>Video Encryption & Decryption using AES</li>
-        <li>NLP Telegram Chatbot (Gita-GPT)</li>
-        <li>Hostel Searching Web Application</li>
+        <li>Attendance Application using .NET</li>
+        <li>Hostel Searching Web Application (Full Stack)</li>
+        <li>Video Encryption & Decryption using AES Algorithm</li>
     </ul>
 </section>
 
@@ -99,26 +103,19 @@
     <h2>Certificates</h2>
 
     <div class="cert-grid">
-        <div class="cert-card">
-            <img src="assets/hipaa-cert.jpeg">
-            <p>HIPAA Compliance</p>
-        </div>
-
-        <div class="cert-card">
-            <img src="assets/itil-cert.jpeg">
-            <p>ITIL Foundation</p>
-        </div>
-
-        <div class="cert-card">
-            <img src="assets/python-cert.jpeg">
-            <p>Python Programming</p>
-        </div>
-
-        <div class="cert-card">
-            <img src="assets/webdesign-cert.jpeg">
-            <p>Web Design</p>
-        </div>
+        <img src="assets/hipaa-cert.jpeg" alt="HIPAA Certificate">
+        <img src="assets/itil-cert.jpeg" alt="ITIL Certificate">
+        <img src="assets/programming-cert.jpeg" alt="Programming Foundations">
+        <img src="assets/python-cert.jpeg" alt="Python Full Stack Certificate">
+        <img src="assets/webdesign-cert.jpeg" alt="Web Design Certificate">
     </div>
+</section>
+
+<section id="interests" class="card">
+    <h2>Areas of Interest</h2>
+    <p>
+        Photography, Video Editing, Traveling, Reading Novels, Exploring New Technologies
+    </p>
 </section>
 
 <footer>
